<resources>
    <string name="app_name">RoncaFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_til">Contraseña</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="user_til">Correo electrónico</string>
    <string name="rm_calculator">CALCULADORA RM</string>
    <string name="home_nav_string">INICIO</string>
    <string name="chat">CHAT</string>
    <string name="settings">AJUSTES</string>
    <string name="peso">PESO</string>
    <string name="reps">REPS</string>
    <string name="calcular">CALCULAR</string>
    <string name="rmTitle">"Tu 1RM es de: "</string>
    <string name="reservar">RESERVAR</string>
    <string name="rutinas">RUTINAS</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="series">SERIES</string>
    <string name="globalChat">ABRIR CHAT GLOBAL</string>
    <string name="et_mensaje">Escriba un mensaje</string>
    <string name="infoPersonal">INFORMACIÓN PERSONAL</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="alertas">AVISOS</string>
    <string name="mis_reservas">MIS RESERVAS</string>
</resources>