<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_nav_option"
            android:icon="@drawable/ic_home"
            android:title="@string/home_nav_string"/>
        <item
            android:id="@+id/rutinas_nav_option"
            android:icon="@drawable/ic_calculadora_rm"
            android:title="@string/rutinas"/>
        <item
            android:id="@+id/rm_calculator_nav_option"
            android:icon="@drawable/ic_calculadora_rm"
            android:title="@string/rm_calculator"/>
        <item
            android:id="@+id/chat_nav_option"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat"/>
        <item
            android:id="@+id/settings_nav_option"
            android:icon="@drawable/ic_personal_info"
            android:title="@string/infoPersonal"/>

    </group>
</menu>